--- a/app/pages/project.html
+++ b/app/pages/project.html
@@ -127,7 +127,8 @@
               <img class="project__guarantee-img" src="images/icons/guarantee.svg" alt="guarantee">
               <h6 class="project__guarantee-text small"><span>Гарантия до 5 лет</span> по договору</h6>
             </div>
-            <button class="project__guarantee-btn btn-grey modal-call" data-id="callback">Бесплатная консультация</button>
+            <button class="project__guarantee-btn btn-grey modal-call" data-id="callback">Бесплатная
+              консультация</button>
             <button class="project__guarantee-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
           </div>
         </div>
@@ -266,7 +267,7 @@
     </div>
   </div>
 
-  <div class="characteristics block">
+  <div class="characteristics">
     <div class="container">
       <div class="characteristics__inner">
         <h2 class="characteristics__title">Общие характеристики</h2>
@@ -344,7 +345,8 @@
               <h6 class="menu-1">Звоните с 9 до 18 часов</h6>
             </div>
           </div>
-          <button class="project-video__bottom-btn btn-green modal-call" data-id="callback">Бесплатная консультация</button>
+          <button class="project-video__bottom-btn btn-green modal-call" data-id="callback">Бесплатная
+            консультация</button>
         </div>
         <div class="project-video__video">
           <iframe width="770" height="470"
