--- a/app/pages/projects.html
+++ b/app/pages/projects.html
@@ -154,7 +154,8 @@
                 <img class="banner__img" src="images/ribbon-mobile.png" loading="lazy" alt="ribbon">
                 <div class="banner__content">
                   <h2 class="banner__title">БЕСПЛАТНО</h2>
-                  <button class="banner__btn btn-green menu-2 modal-call" data-id="callback">Получить проект дома</button>
+                  <button class="banner__btn btn-green menu-2 modal-call" data-id="callback">Получить проект
+                    дома</button>
                 </div>
               </div>
               <img class="banner__bg" src="images/texture/banner-texture.png" loading="lazy" alt="banner">
@@ -213,7 +214,7 @@
                 </ul>
                 <div class="projects__content-btns">
                   <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -239,7 +240,7 @@
                 </ul>
                 <div class="projects__content-btns">
                   <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -265,7 +266,7 @@
                 </ul>
                 <div class="projects__content-btns">
                   <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -291,7 +292,7 @@
                 </ul>
                 <div class="projects__content-btns">
                   <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -317,7 +318,7 @@
                 </ul>
                 <div class="projects__content-btns">
                   <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -343,7 +344,7 @@
                 </ul>
                 <div class="projects__content-btns">
                   <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -369,7 +370,7 @@
                 </ul>
                 <div class="projects__content-btns">
                   <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -395,7 +396,7 @@
                 </ul>
                 <div class="projects__content-btns">
                   <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -421,7 +422,7 @@
                 </ul>
                 <div class="projects__content-btns">
                   <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -447,7 +448,7 @@
                 </ul>
                 <div class="projects__content-btns">
                   <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -457,7 +458,7 @@
             <a class="pagination__btn pagination__prev small disabled" href="#!">Назад</a>
             <ul class="pagination__list">
               <li class="pagination__item">
-                <a href="#!" class="pagination__item-link pagination-active menu-1">1</a>
+                <a href="#!" class="pagination__item-link pagination-first pagination-active menu-1">1</a>
               </li>
               <li class="pagination__item">
                 <a href="#!" class="pagination__item-link menu-1">2</a>
@@ -469,7 +470,7 @@
                 <span class="pagination__item-dots menu-1">...</span>
               </li>
               <li class="pagination__item">
-                <a href="#!" class="pagination__item-link menu-1">8</a>
+                <a href="#!" class="pagination__item-link pagination-last menu-1">8</a>
               </li>
             </ul>
             <a class="pagination__btn pagination__next small" href="#!">Вперед</a>
