--- a/app/pages/projects.html
+++ b/app/pages/projects.html
@@ -213,8 +213,8 @@
                   </li>
                 </ul>
                 <div class="projects__content-btns">
-                  <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-grey">Что входит</button>
+                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -239,8 +239,8 @@
                   </li>
                 </ul>
                 <div class="projects__content-btns">
-                  <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-grey">Что входит</button>
+                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -265,8 +265,8 @@
                   </li>
                 </ul>
                 <div class="projects__content-btns">
-                  <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-grey">Что входит</button>
+                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -291,8 +291,8 @@
                   </li>
                 </ul>
                 <div class="projects__content-btns">
-                  <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-grey">Что входит</button>
+                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -317,8 +317,8 @@
                   </li>
                 </ul>
                 <div class="projects__content-btns">
-                  <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-grey">Что входит</button>
+                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -343,8 +343,8 @@
                   </li>
                 </ul>
                 <div class="projects__content-btns">
-                  <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-grey">Что входит</button>
+                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -369,8 +369,8 @@
                   </li>
                 </ul>
                 <div class="projects__content-btns">
-                  <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-grey">Что входит</button>
+                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -395,8 +395,8 @@
                   </li>
                 </ul>
                 <div class="projects__content-btns">
-                  <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-grey">Что входит</button>
+                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -421,8 +421,8 @@
                   </li>
                 </ul>
                 <div class="projects__content-btns">
-                  <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-grey">Что входит</button>
+                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
                 </div>
               </div>
             </a>
@@ -447,8 +447,8 @@
                   </li>
                 </ul>
                 <div class="projects__content-btns">
-                  <button class="projects__content-btn btn-grey modal-call" data-id="callback">Что входит</button>
-                  <button class="projects__content-btn btn-green">Хочу такой дом</button>
+                  <button class="projects__content-btn btn-grey">Что входит</button>
+                  <button class="projects__content-btn btn-green modal-call" data-id="callback">Хочу такой дом</button>
                 </div>
               </div>
             </a>
