--- a/app/pages/project.html
+++ b/app/pages/project.html
@@ -446,7 +446,7 @@
                 <p class="built__item-text">Роскошный одноэтажный дом в стиле «Шале» в каркасном исполнении.
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
-                  <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="btn-green">Хочу такой дом</button>
                   <button class="btn-grey modal-call" data-id="callback">Что входит в постройку</button>
                 </div>
               </div>
@@ -493,7 +493,7 @@
                 <p class="built__item-text">Роскошный одноэтажный дом в стиле «Шале» в каркасном исполнении.
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
-                  <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="btn-green">Хочу такой дом</button>
                   <button class="btn-grey modal-call" data-id="callback">Что входит в постройку</button>
                 </div>
               </div>
@@ -540,7 +540,7 @@
                 <p class="built__item-text">Роскошный одноэтажный дом в стиле «Шале» в каркасном исполнении.
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
-                  <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="btn-green">Хочу такой дом</button>
                   <button class="btn-grey modal-call" data-id="callback">Что входит в постройку</button>
                 </div>
               </div>
@@ -587,7 +587,7 @@
                 <p class="built__item-text">Роскошный одноэтажный дом в стиле «Шале» в каркасном исполнении.
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
-                  <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="btn-green">Хочу такой дом</button>
                   <button class="btn-grey modal-call" data-id="callback">Что входит в постройку</button>
                 </div>
               </div>
@@ -634,7 +634,7 @@
                 <p class="built__item-text">Роскошный одноэтажный дом в стиле «Шале» в каркасном исполнении.
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
-                  <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="btn-green">Хочу такой дом</button>
                   <button class="btn-grey modal-call" data-id="callback">Что входит в постройку</button>
                 </div>
               </div>
