--- a/app/pages/project.html
+++ b/app/pages/project.html
@@ -446,8 +446,8 @@
                 <p class="built__item-text">Роскошный одноэтажный дом в стиле «Шале» в каркасном исполнении.
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
-                  <button class="btn-green">Хочу такой дом</button>
-                  <button class="btn-grey modal-call" data-id="callback">Что входит в постройку</button>
+                  <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="btn-grey">Что входит в постройку</button>
                 </div>
               </div>
               <div class="built__options">
@@ -493,8 +493,8 @@
                 <p class="built__item-text">Роскошный одноэтажный дом в стиле «Шале» в каркасном исполнении.
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
-                  <button class="btn-green">Хочу такой дом</button>
-                  <button class="btn-grey modal-call" data-id="callback">Что входит в постройку</button>
+                  <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="btn-grey">Что входит в постройку</button>
                 </div>
               </div>
               <div class="built__options">
@@ -540,8 +540,8 @@
                 <p class="built__item-text">Роскошный одноэтажный дом в стиле «Шале» в каркасном исполнении.
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
-                  <button class="btn-green">Хочу такой дом</button>
-                  <button class="btn-grey modal-call" data-id="callback">Что входит в постройку</button>
+                  <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="btn-grey">Что входит в постройку</button>
                 </div>
               </div>
               <div class="built__options">
@@ -587,8 +587,8 @@
                 <p class="built__item-text">Роскошный одноэтажный дом в стиле «Шале» в каркасном исполнении.
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
-                  <button class="btn-green">Хочу такой дом</button>
-                  <button class="btn-grey modal-call" data-id="callback">Что входит в постройку</button>
+                  <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="btn-grey">Что входит в постройку</button>
                 </div>
               </div>
               <div class="built__options">
@@ -634,8 +634,8 @@
                 <p class="built__item-text">Роскошный одноэтажный дом в стиле «Шале» в каркасном исполнении.
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
-                  <button class="btn-green">Хочу такой дом</button>
-                  <button class="btn-grey modal-call" data-id="callback">Что входит в постройку</button>
+                  <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
+                  <button class="btn-grey">Что входит в постройку</button>
                 </div>
               </div>
               <div class="built__options">
