add invisible filter item then more 3

--- a/app/pages/projects.html
+++ b/app/pages/projects.html
@@ -35,7 +35,7 @@
               </div>
               <div class="sidebar__item">
                 <p class="sidebar__title">Кол-во этажей</p>
-                <ul class="sidebar__list">
+                <ul class="sidebar__list sidebar__list-long">
                   <li class="sidebar__list-item">
                     <input class="sidebar__checkbox" name="etagi" value="1" type="checkbox" id="checkbox1">
                     <label class="sidebar__label small" for="checkbox1">Один</label>
@@ -52,11 +52,12 @@
                     <input class="sidebar__checkbox" name="etagi" value="4" type="checkbox" id="checkbox4">
                     <label class="sidebar__label small" for="checkbox4">Больше трех</label>
                   </li>
+                  <a class="sidebar__list-count" href="#!">Показать всё</a>
                 </ul>
               </div>
               <div class="sidebar__item">
                 <p class="sidebar__title">Кол-во комнат</p>
-                <ul class="sidebar__list">
+                <ul class="sidebar__list sidebar__list-long">
                   <li class="sidebar__list-item">
                     <input class="sidebar__checkbox" name="room" value="1" type="checkbox" id="checkbox5">
                     <label class="sidebar__label small" for="checkbox5">1 комната</label>
@@ -77,6 +78,7 @@
                     <input class="sidebar__checkbox" name="room" value="5" type="checkbox" id="checkbox9">
                     <label class="sidebar__label small" for="checkbox9">5 и более комнат</label>
                   </li>
+                  <a class="sidebar__list-count" href="#!">Показать всё</a>
                 </ul>
               </div>
               <div class="sidebar__item">
@@ -98,7 +100,7 @@
               </div>
               <div class="sidebar__item">
                 <p class="sidebar__title">Жилая площадь</p>
-                <ul class="sidebar__list">
+                <ul class="sidebar__list sidebar__list-long">
                   <li class="sidebar__list-item">
                     <input class="sidebar__checkbox" name="livingspace" value="50" type="checkbox" id="checkbox13">
                     <label class="sidebar__label small" for="checkbox13">до 50 кв. м.</label>
@@ -115,6 +117,7 @@
                     <input class="sidebar__checkbox" name="livingspace" value="151" type="checkbox" id="checkbox16">
                     <label class="sidebar__label small" for="checkbox16">Более 150 кв.м.</label>
                   </li>
+                  <a class="sidebar__list-count" href="#!">Показать всё</a>
                 </ul>
               </div>
               <div class="sidebar__item">
