--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -874,8 +874,16 @@
           <h5 class="discount__suptitle">И получить <span>скидку 20%</span> на мебель от наших партнеров!</h5>
         </div>
         <form class="discount__form">
-          <input class="discount__input small" type="tel" placeholder="Номер телефона">
-          <button class="discount__btn btn-green modal-call" data-id="thanks" type="button">Получить скидку</button>
+          <div class="discount__form-row">
+            <input class="discount__input small" type="tel" placeholder="Номер телефона">
+            <button class="discount__btn btn-green modal-call" data-id="thanks" type="button">Получить скидку</button>
+          </div>
+          <div class="agreement">
+            <input class="agreement-checkbox" name="agree" value="agreement" type="checkbox" id="agreementDiscount">
+            <label class="agreement-label small" for="agreementDiscount">
+              Даю свое согласие на обработку моих персональных данных
+            </label>
+          </div>
         </form>
         <img class="discount__img" src="images/hand.png" loading="lazy" alt="hand">
       </div>
@@ -1369,8 +1377,16 @@
           <h5 class="callback__suptitle">Построить дом, коттедж или быть может замок? Ответим на все вопросы! </h5>
         </div>
         <form class="callback__form">
-          <input class="callback__input small" type="tel" placeholder="Номер телефона">
-          <button class="btn-green modal-call" data-id="thanks" type="button">Отправить</button>
+          <div class="callback__form-row">
+            <input class="callback__input small" type="tel" placeholder="Номер телефона">
+            <button class="btn-green modal-call" data-id="thanks" type="button">Отправить</button>
+          </div>
+          <div class="agreement">
+            <input class="agreement-checkbox" name="agree" value="agreement" type="checkbox" id="agreementCallback">
+            <label class="agreement-label small" for="agreementCallback">
+              Даю свое согласие на обработку моих персональных данных
+            </label>
+          </div>
         </form>
         <img class="callback__img" src="images/callback.png" loading="lazy" alt="hand">
       </div>
