--- a/app/pages/works.html
+++ b/app/pages/works.html
@@ -135,7 +135,7 @@
         <div class="works__items">
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="images/page-works/works-1.png" loading="lazy" alt="works">
+              <img class="works__item-img" src="../images/page-works/works-1.png" loading="lazy" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-178</h3>
