--- a/app/pages/contacts.html
+++ b/app/pages/contacts.html
@@ -26,7 +26,8 @@
     <div class="container">
       <div class="contacts__inner">
         <div class="contacts__map">
-          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac1e1c079f914025e3621d4f8800da9b0c117db41ac4747456c9936f986226687&amp;width=1170&amp;height=570&amp;lang=ru_RU&amp;scroll=false"></script>
+          <div class="map" id="map"></div>
+          <!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac1e1c079f914025e3621d4f8800da9b0c117db41ac4747456c9936f986226687&amp;width=1170&amp;height=570&amp;lang=ru_RU&amp;scroll=false"></script> -->
 
           <div class="contacts__card">
             <div class="contacts__card-item">
