--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -410,16 +410,16 @@
 
               <div class="calculation__content-body">
                 <div class="calculation__tab">
-                  <button class="calculation__tab-item show" data-id="econom" type="button">
+                  <button class="calculation__tab-item show" data-id="econom" data-price="45000" type="button">
                     <h6 class="menu-1">Эконом</h6>
                   </button>
-                  <button class="calculation__tab-item" data-id="basic" type="button">
+                  <button class="calculation__tab-item" data-id="basic" data-price="50000" type="button">
                     <h6 class="menu-1">Базовая</h6>
                   </button>
-                  <button class="calculation__tab-item" data-id="standart" type="button">
+                  <button class="calculation__tab-item" data-id="standart" data-price="60000" type="button">
                     <h6 class="menu-1">Стандарт</h6>
                   </button>
-                  <button class="calculation__tab-item" data-id="premium" type="button">
+                  <button class="calculation__tab-item" data-id="premium" data-price="75000" type="button">
                     <h6 class="menu-1">Премиум</h6>
                   </button>
                 </div>
