--- a/app/pages/reviews.html
+++ b/app/pages/reviews.html
@@ -88,6 +88,12 @@
             </label>
           </div>
           <button class="btn-green modal-call" data-id="thanks" type="button">Отправить</button>
+          <div class="agreement">
+            <input class="agreement-checkbox" name="agree" value="agreement" type="checkbox" id="reviewsAgreement">
+            <label class="agreement-label small" for="reviewsAgreement">
+              Даю свое согласие на обработку моих персональных данных
+            </label>
+          </div>
         </form>
         <picture class="callback__picture">
           <source media="(min-width: 769px)" srcset="images/page-reviews/reviews-form.png">
