--- a/app/pages/project.html
+++ b/app/pages/project.html
@@ -164,34 +164,39 @@
         </div>
         <div class="plan__slider">
           <div class="plan__slider-item">
-            <div class="plan__item">
+            <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+              data-caption="Этаж 1, общая плащадь 72м">
               <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
               <p class="plan__item-title">Этаж 1, общая плащадь 72м</p>
-            </div>
+            </a>
           </div>
           <div class="plan__slider-item">
-            <div class="plan__item">
+            <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+              data-caption="Этаж 2, общая плащадь 72м">
               <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
               <p class="plan__item-title">Этаж 2, общая плащадь 72м</p>
-            </div>
+            </a>
           </div>
           <div class="plan__slider-item">
-            <div class="plan__item">
+            <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+              data-caption="Этаж 3, общая плащадь 72м">
               <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
               <p class="plan__item-title">Этаж 3, общая плащадь 72м</p>
-            </div>
+            </a>
           </div>
           <div class="plan__slider-item">
-            <div class="plan__item">
+            <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+              data-caption="Этаж 4, общая плащадь 72м">
               <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
               <p class="plan__item-title">Этаж 4, общая плащадь 72м</p>
-            </div>
+            </a>
           </div>
           <div class="plan__slider-item">
-            <div class="plan__item">
+            <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+              data-caption="Этаж 5, общая плащадь 72м">
               <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
               <p class="plan__item-title">Этаж 5, общая плащадь 72м</p>
-            </div>
+            </a>
           </div>
         </div>
       </div>
@@ -267,7 +272,7 @@
     </div>
   </div>
 
-  <div class="characteristics">
+  <div class="characteristics block">
     <div class="container">
       <div class="characteristics__inner">
         <h2 class="characteristics__title">Общие характеристики</h2>
@@ -447,7 +452,7 @@
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
                   <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
-                  <button class="btn-grey">Что входит в постройку</button>
+                  <button class="btn-white">Что входит в постройку</button>
                 </div>
               </div>
               <div class="built__options">
@@ -494,7 +499,7 @@
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
                   <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
-                  <button class="btn-grey">Что входит в постройку</button>
+                  <button class="btn-white">Что входит в постройку</button>
                 </div>
               </div>
               <div class="built__options">
@@ -541,7 +546,7 @@
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
                   <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
-                  <button class="btn-grey">Что входит в постройку</button>
+                  <button class="btn-white">Что входит в постройку</button>
                 </div>
               </div>
               <div class="built__options">
@@ -588,7 +593,7 @@
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
                   <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
-                  <button class="btn-grey">Что входит в постройку</button>
+                  <button class="btn-white">Что входит в постройку</button>
                 </div>
               </div>
               <div class="built__options">
@@ -635,7 +640,7 @@
                   Дом идеально подходит для круглогодичного проживания, для семьи из 3–4 человек.</p>
                 <div class="built__item-btns">
                   <button class="btn-green modal-call" data-id="callback">Хочу такой дом</button>
-                  <button class="btn-grey">Что входит в постройку</button>
+                  <button class="btn-white">Что входит в постройку</button>
                 </div>
               </div>
               <div class="built__options">
