--- a/contacts.html
+++ b/contacts.html
@@ -293,7 +293,8 @@
     <div class="container">
       <div class="contacts__inner">
         <div class="contacts__map">
-          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac1e1c079f914025e3621d4f8800da9b0c117db41ac4747456c9936f986226687&amp;width=1170&amp;height=570&amp;lang=ru_RU&amp;scroll=false"></script>
+          <div class="map" id="map"></div>
+          <!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac1e1c079f914025e3621d4f8800da9b0c117db41ac4747456c9936f986226687&amp;width=1170&amp;height=570&amp;lang=ru_RU&amp;scroll=false"></script> -->
 
           <div class="contacts__card">
             <div class="contacts__card-item">
@@ -711,6 +712,12 @@
         <form class="modal__form" action="">
           <input class="callback__input small" type="text" placeholder="Имя">
           <input class="callback__input small" type="tel" placeholder="Номер телефона">
+          <div class="agreement">
+            <input class="agreement-checkbox" name="agree" value="agreement" type="checkbox" id="wheelAgreement">
+            <label class="agreement-label small" for="wheelAgreement">
+              Даю свое согласие на обработку моих персональных данных
+            </label>
+          </div>
           <button class="btn-green" type="submit">Получить скидку</button>
         </form>
       </div>
@@ -722,6 +729,8 @@
 <script defer src="libs/slick/slick.min.js"></script>
 <script defer src="libs/inputmask.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+<script defer src="https://api-maps.yandex.ru/2.1/?apikey=cd717dff-806d-44e1-a46d-04a850aa320f&load=Map&lang=ru_RU"
+  type="text/javascript"></script>
 <script defer src="js/main.js"></script>
 <script>
   // wheel
