--- a/index.html
+++ b/index.html
@@ -677,16 +677,16 @@
 
               <div class="calculation__content-body">
                 <div class="calculation__tab">
-                  <button class="calculation__tab-item show" data-id="econom" type="button">
+                  <button class="calculation__tab-item show" data-id="econom" data-price="45000" type="button">
                     <h6 class="menu-1">Эконом</h6>
                   </button>
-                  <button class="calculation__tab-item" data-id="basic" type="button">
+                  <button class="calculation__tab-item" data-id="basic" data-price="50000" type="button">
                     <h6 class="menu-1">Базовая</h6>
                   </button>
-                  <button class="calculation__tab-item" data-id="standart" type="button">
+                  <button class="calculation__tab-item" data-id="standart" data-price="60000" type="button">
                     <h6 class="menu-1">Стандарт</h6>
                   </button>
-                  <button class="calculation__tab-item" data-id="premium" type="button">
+                  <button class="calculation__tab-item" data-id="premium" data-price="75000" type="button">
                     <h6 class="menu-1">Премиум</h6>
                   </button>
                 </div>
@@ -2139,6 +2139,12 @@
         <form class="modal__form" action="">
           <input class="callback__input small" type="text" placeholder="Имя">
           <input class="callback__input small" type="tel" placeholder="Номер телефона">
+          <div class="agreement">
+            <input class="agreement-checkbox" name="agree" value="agreement" type="checkbox" id="wheelAgreement">
+            <label class="agreement-label small" for="wheelAgreement">
+              Даю свое согласие на обработку моих персональных данных
+            </label>
+          </div>
           <button class="btn-green" type="submit">Получить скидку</button>
         </form>
       </div>
@@ -2150,6 +2156,8 @@
 <script defer src="libs/slick/slick.min.js"></script>
 <script defer src="libs/inputmask.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+<script defer src="https://api-maps.yandex.ru/2.1/?apikey=cd717dff-806d-44e1-a46d-04a850aa320f&load=Map&lang=ru_RU"
+  type="text/javascript"></script>
 <script defer src="js/main.js"></script>
 <script>
   // wheel
