--- a/app/pages/works.html
+++ b/app/pages/works.html
@@ -175,7 +175,7 @@
           </div>
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="images/page-works/works-2.png" loading="lazy" alt="works">
+              <img class="works__item-img" src="../images/hero/hero-desktop.png" loading="lazy" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-124</h3>
