add new libs - swiper & replaced slick with swiper on some pages & remove some styles

--- a/app/pages/work.html
+++ b/app/pages/work.html
@@ -34,56 +34,89 @@
     <div class="container">
       <div class="work__inner">
         <div class="work__content">
-          <div class="work__list">
-            <div class="work__list-item">
-              <img class="work__list-img" src="images/page-work/work-min-1.png" alt="work">
+
+          <div class="slider__col">
+
+            <div class="swiper-button-prev slider__prev"></div>
+
+            <div class="slider__thumbs">
+              <div class="swiper-container"> <!-- Слайдер с превью -->
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="slider__image"><img src="images/page-work/work-min-1.png" alt="" /></div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="slider__image"><img src="images/page-work/work-min-2.png" alt="" /></div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="slider__image"><img src="images/page-work/work-min-3.png" alt="" /></div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="slider__image"><img src="images/page-work/work-min-4.png" alt="" /></div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="slider__image"><img src="images/page-work/work-min-5.png" alt="" /></div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="slider__image"><img src="images/page-work/work-min-1.png" alt="" /></div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="slider__image"><img src="images/page-work/work-min-2.png" alt="" /></div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="slider__image"><img src="images/page-work/work-min-3.png" alt="" /></div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="slider__image"><img src="images/page-work/work-min-4.png" alt="" /></div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="slider__image"><img src="images/page-work/work-min-5.png" alt="" /></div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="work__list-item">
-              <img class="work__list-img" src="images/page-work/work-min-2.png" alt="work">
-            </div>
-            <div class="work__list-item">
-              <img class="work__list-img" src="images/page-work/work-min-3.png" alt="work">
-            </div>
-            <div class="work__list-item">
-              <img class="work__list-img" src="images/page-work/work-min-4.png" alt="work">
-            </div>
-            <div class="work__list-item">
-              <img class="work__list-img" src="images/page-work/work-min-5.png" alt="work">
-            </div>
-            <div class="work__list-item">
-              <img class="work__list-img" src="images/page-work/work-min-4.png" alt="work">
-            </div>
-            <div class="work__list-item">
-              <img class="work__list-img" src="images/page-work/work-min-5.png" alt="work">
+
+            <div class="swiper-button-next slider__next"></div>
+
+          </div>
+
+          <div class="slider__images">
+            <div class="swiper-container"> <!-- Слайдер с изображениями -->
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="work__slider">
-            <div class="work__slider-item">
-              <div class="work__item">
-                <img class="work__item-img" src="images/page-work/work-1.png" alt="work">
-              </div>
-            </div>
-            <div class="work__slider-item">
-              <div class="work__item">
-                <img class="work__item-img" src="images/page-work/work-1.png" alt="work">
-              </div>
-            </div>
-            <div class="work__slider-item">
-              <div class="work__item">
-                <img class="work__item-img" src="images/page-work/work-1.png" alt="work">
-              </div>
-            </div>
-            <div class="work__slider-item">
-              <div class="work__item">
-                <img class="work__item-img" src="images/page-work/work-1.png" alt="work">
-              </div>
-            </div>
-            <div class="work__slider-item">
-              <div class="work__item">
-                <img class="work__item-img" src="images/page-work/work-1.png" alt="work">
-              </div>
-            </div>
-          </div>
+
           <div class="work__card">
             <ul class="work__card-list">
               <li class="work__card-item">
