--- a/app/works.html
+++ b/app/works.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="libs/slick/slick.css">
   <link rel="stylesheet" type="text/css"
     href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
   <!-- calculation input style -->
   <style>
@@ -402,7 +403,7 @@
         <div class="works__items">
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="../images/page-works/works-1.png" loading="lazy" alt="works">
+              <img class="works__item-img" src="images/page-works/works-1.png" loading="lazy" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-178</h3>
@@ -442,7 +443,7 @@
           </div>
           <div class="works__item">
             <div class="works__item-block">
-              <img class="works__item-img" src="../images/hero/hero-desktop.png" loading="lazy" alt="works">
+              <img class="works__item-img" src="images/page-works/works-2.png" loading="lazy" alt="works">
               <div class="works__content">
                 <div class="works__content-head">
                   <h3 class="works__content-name">Проект КД-124</h3>
@@ -1301,6 +1302,7 @@
 <script defer src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 <script defer src="https://api-maps.yandex.ru/2.1/?apikey=cd717dff-806d-44e1-a46d-04a850aa320f&load=Map&lang=ru_RU"
   type="text/javascript"></script>
+<script src="libs/swiper/swiper-bundle.min.js"></script>
 <script defer src="js/main.js"></script>
 <script>
   // wheel
