--- a/app/pages/project.html
+++ b/app/pages/project.html
@@ -139,66 +139,149 @@
   <div class="plan block">
     <div class="container">
       <div class="plan__inner">
-        <div class="plan__list">
-          <div class="plan__list-item">
-            <img class="plan__list-img" src="images/page-project/plan-min-1.png" alt="plan">
+
+        <div class="slider__col">
+
+          <div class="swiper-button-prev slider__prev"></div>
+
+          <div class="slider__thumbs plan__slider__thumbs">
+            <div class="swiper-container"> <!-- Слайдер с изображениями -->
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider__image"><img src="images/page-work/work-1.png" alt="" /></div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="plan__list-item">
-            <img class="plan__list-img" src="images/page-project/plan-min-2.png" alt="plan">
-          </div>
-          <div class="plan__list-item">
-            <img class="plan__list-img" src="images/page-project/plan-min-3.png" alt="plan">
-          </div>
-          <div class="plan__list-item">
-            <img class="plan__list-img" src="images/page-project/plan-min-4.png" alt="plan">
-          </div>
-          <div class="plan__list-item">
-            <img class="plan__list-img" src="images/page-project/plan-min-5.png" alt="plan">
-          </div>
-          <div class="plan__list-item">
-            <img class="plan__list-img" src="images/page-project/plan-min-4.png" alt="plan">
-          </div>
-          <div class="plan__list-item">
-            <img class="plan__list-img" src="images/page-project/plan-min-5.png" alt="plan">
+
+          <div class="swiper-button-next slider__next"></div>
+
+        </div>
+
+        <div class="slider__images plan__slider__images">
+          <div class="swiper-container"> <!-- Слайдер с превью -->
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="slider__image">
+                  <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+                    data-caption="Этаж 1, общая плащадь 72м">
+                    <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
+                    <p class="plan__item-title">Этаж 1, общая плащадь 72м</p>
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider__image">
+                  <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+                    data-caption="Этаж 2, общая плащадь 72м">
+                    <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
+                    <p class="plan__item-title">Этаж 2, общая плащадь 72м</p>
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider__image">
+                  <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+                    data-caption="Этаж 3, общая плащадь 72м">
+                    <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
+                    <p class="plan__item-title">Этаж 3, общая плащадь 72м</p>
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider__image">
+                  <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+                    data-caption="Этаж 4, общая плащадь 72м">
+                    <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
+                    <p class="plan__item-title">Этаж 4, общая плащадь 72м</p>
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider__image">
+                  <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+                    data-caption="Этаж 5, общая плащадь 72м">
+                    <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
+                    <p class="plan__item-title">Этаж 5, общая плащадь 72м</p>
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider__image">
+                  <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+                    data-caption="Этаж 1, общая плащадь 72м">
+                    <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
+                    <p class="plan__item-title">Этаж 1, общая плащадь 72м</p>
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider__image">
+                  <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+                    data-caption="Этаж 2, общая плащадь 72м">
+                    <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
+                    <p class="plan__item-title">Этаж 2, общая плащадь 72м</p>
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider__image">
+                  <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+                    data-caption="Этаж 3, общая плащадь 72м">
+                    <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
+                    <p class="plan__item-title">Этаж 3, общая плащадь 72м</p>
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider__image">
+                  <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+                    data-caption="Этаж 4, общая плащадь 72м">
+                    <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
+                    <p class="plan__item-title">Этаж 4, общая плащадь 72м</p>
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider__image">
+                  <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
+                    data-caption="Этаж 5, общая плащадь 72м">
+                    <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
+                    <p class="plan__item-title">Этаж 5, общая плащадь 72м</p>
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="plan__slider">
-          <div class="plan__slider-item">
-            <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
-              data-caption="Этаж 1, общая плащадь 72м">
-              <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
-              <p class="plan__item-title">Этаж 1, общая плащадь 72м</p>
-            </a>
-          </div>
-          <div class="plan__slider-item">
-            <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
-              data-caption="Этаж 2, общая плащадь 72м">
-              <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
-              <p class="plan__item-title">Этаж 2, общая плащадь 72м</p>
-            </a>
-          </div>
-          <div class="plan__slider-item">
-            <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
-              data-caption="Этаж 3, общая плащадь 72м">
-              <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
-              <p class="plan__item-title">Этаж 3, общая плащадь 72м</p>
-            </a>
-          </div>
-          <div class="plan__slider-item">
-            <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
-              data-caption="Этаж 4, общая плащадь 72м">
-              <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
-              <p class="plan__item-title">Этаж 4, общая плащадь 72м</p>
-            </a>
-          </div>
-          <div class="plan__slider-item">
-            <a class="plan__item" href="images/page-project/plan-1.png" data-type="image" data-fancybox="gallery"
-              data-caption="Этаж 5, общая плащадь 72м">
-              <img class="plan__item-img" src="images/page-project/plan-1.png" alt="plan">
-              <p class="plan__item-title">Этаж 5, общая плащадь 72м</p>
-            </a>
-          </div>
-        </div>
+
       </div>
     </div>
   </div>
