--- a/app/pages/search.html
+++ b/app/pages/search.html
@@ -36,7 +36,7 @@
 
         <div class="search__items">
           <div class="search__item">
-            <img src="../images/page-search/search-1.png" class="search__item-img" alt="">
+            <img src="images/page-search/search-1.png" class="search__item-img" alt="">
             <div class="search__item-content">
               <h4 class="search__item-title">
                 Технический надзор
@@ -51,7 +51,7 @@
             </div>
           </div>
           <div class="search__item">
-            <img src="../images/page-search/search-2.png" class="search__item-img" alt="">
+            <img src="images/page-search/search-2.png" class="search__item-img" alt="">
             <div class="search__item-content">
               <h4 class="search__item-title">
                 КД-178
@@ -67,7 +67,7 @@
             </div>
           </div>
           <div class="search__item">
-            <img src="../images/page-search/search-3.png" class="search__item-img" alt="">
+            <img src="images/page-search/search-3.png" class="search__item-img" alt="">
             <div class="search__item-content">
               <h4 class="search__item-title">
                 КД-124
@@ -83,7 +83,7 @@
             </div>
           </div>
           <div class="search__item">
-            <img src="../images/page-search/search-4.png" class="search__item-img" alt="">
+            <img src="images/page-search/search-4.png" class="search__item-img" alt="">
             <div class="search__item-content">
               <h4 class="search__item-title">
                 Барбекю, бани, беседки, заборы
@@ -99,7 +99,7 @@
             </div>
           </div>
           <div class="search__item">
-            <img src="../images/page-search/search-5.png" class="search__item-img" alt="">
+            <img src="images/page-search/search-5.png" class="search__item-img" alt="">
             <div class="search__item-content">
               <h4 class="search__item-title">
                 КД-179
@@ -114,7 +114,7 @@
             </div>
           </div>
           <div class="search__item">
-            <img src="../images/page-search/search-5.png" class="search__item-img" alt="">
+            <img src="images/page-search/search-5.png" class="search__item-img" alt="">
             <div class="search__item-content">
               <h4 class="search__item-title">
                 КД-178
@@ -129,7 +129,7 @@
             </div>
           </div>
           <div class="search__item">
-            <img src="../images/page-search/search-1.png" class="search__item-img" alt="">
+            <img src="images/page-search/search-1.png" class="search__item-img" alt="">
             <div class="search__item-content">
               <h4 class="search__item-title">
                 Технический надзор
@@ -144,7 +144,7 @@
             </div>
           </div>
           <div class="search__item">
-            <img src="../images/page-search/search-2.png" class="search__item-img" alt="">
+            <img src="images/page-search/search-2.png" class="search__item-img" alt="">
             <div class="search__item-content">
               <h4 class="search__item-title">
                 КД-178
@@ -160,7 +160,7 @@
             </div>
           </div>
           <div class="search__item">
-            <img src="../images/page-search/search-3.png" class="search__item-img" alt="">
+            <img src="images/page-search/search-3.png" class="search__item-img" alt="">
             <div class="search__item-content">
               <h4 class="search__item-title">
                 КД-179
@@ -175,7 +175,7 @@
             </div>
           </div>
           <div class="search__item">
-            <img src="../images/page-search/search-5.png" class="search__item-img" alt="">
+            <img src="images/page-search/search-5.png" class="search__item-img" alt="">
             <div class="search__item-content">
               <h4 class="search__item-title">
                 КД-178
